--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mustache": "^4.2.0"
+    "cross-fetch": "^3.1.5",
+    "mustache": "^4.2.0",
+    "node-fetch": "^3.2.6"
   }
 }
